fix spacing between search box & category in refine

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -266,6 +266,8 @@ select.form-input {
 .box.refine input[type="number"].refine-userid { width: 65px; } 
 .form-refine input.spacing, .form-refine select.spacing { margin-right: 8px; }
 .form-refine span.spacing { min-width: 100px; display: inline-block; }
+.form-refine .refine-searchbox { border-radius: 3px 0 0 3px; }
+.form-refine .refine-category { border-left: none; border-radius: 0 3px 3px 0; margin-left: -5px;  }
 
 .categories a {
 	display: 	inline-block;
